--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://bhargavsasichandan:ABXhvlgLBf5os7Hc@cluster0.cn0uaaf.mongodb.net/movietickets?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb://eshwarvarmac2004:n4uywcWeQJd1FGLt@v/?ssl=true&replicaSet=atlas-523a4c-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
