--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://eshwarvarmac2004:n4uywcWeQJd1FGLt@cluster0/?ssl=true&replicaSet=atlas-523a4c-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://eshwarvarmac2004:n4uywcWeQJd1FGLt@cluster0.br00j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
